[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Player/Abilities/Heal/Heal.gd" type="Script" id=1]
[ext_resource path="res://assets/Shaders/White_Flash_CanvasMod.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Player/Abilities/Heal/HealAll_FormulaHitbox.gd" type="Script" id=3]
[ext_resource path="res://assets/Audio/SFX/Synth1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Player/Abilities/ScreenTint.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/Target/FormulaTargetScreen.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Ability"
length = 1.55
step = 0.025
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.375, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "ability_start"
}, {
"args": [  ],
"method": "ability_end"
} ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 135.0

[node name="Heal" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="FormulaTargetScreen" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Ability = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenTint" parent="CanvasLayer" instance=ExtResource( 2 )]
color = Color( 0, 1, 1, 0 )
script = ExtResource( 5 )
start_color = Color( 0, 1, 1, 0 )
end_color = Color( 0, 1, 1, 0.25 )

[node name="FormulaHitbox" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 64
script = ExtResource( 3 )
formula_name = "Heal"
base_potency = 4.0
randomness = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="FormulaHitbox"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
